--- a/aula13/ex014/style.css
+++ b/aula13/ex014/style.css
@@ -14,16 +14,20 @@ section {
     background-color: white;
     border-radius: 10px;
     padding: 6px;
-    width: 500;
+    width: 500px;
+    height: 320px;
     margin: auto;
     box-shadow: 5px 5px 10px #4d161681;
 
+}
+div {
+    text-align: center;
+    padding: 8px;
 }
 footer {
     color: white;
     text-align: center;
     font-style: italic;
-
 }
 #imagem {
     border-radius: 50%;
