--- a/aula14/style.css
+++ b/aula14/style.css
@@ -14,11 +14,18 @@ section {
     background-color: white;
     border-radius: 10px;
     padding: 5px;
-    width: 500;
+    width: 400px;
+    height: 360px;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(2, 2, 2, 0.507);
 }
 footer {
     color: white;
     text-align: center;
+}
+#foto {
+    border-radius: 50%;
+    
+    position: center;
+    
 }
